# lib3ds

./: .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/.svn/: all-wcprops  entries
examples/3ds2obj/: CMakeLists.txt
examples/3ds2obj/.svn/: all-wcprops  entries
examples/3ds2obj/.svn/text-base/: 3ds2obj.c.svn-base  CMakeLists.txt.svn-base
examples/3dsdump/: CMakeLists.txt
examples/3dsdump/.svn/: all-wcprops  entries
examples/3dsdump/.svn/text-base/: 3dsdump.c.svn-base  CMakeLists.txt.svn-base
examples/3dsplay/: tga.c
examples/3dsplay/.svn/: all-wcprops  entries
examples/3dsplay/.svn/text-base/: 3dsplay.cpp.svn-base  CMakeLists.txt.svn-base  tga.h.svn-base
examples/cube/: CMakeLists.txt  cube.c
examples/cube/.svn/: all-wcprops  entries
examples/cube/.svn/text-base/: CMakeLists.txt.svn-base
src/: CMakeLists.txt
src/.svn/: all-wcprops  entries
src/.svn/prop-base/: lib3ds_shadow.c.svn-base
