CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
PROJECT(lib3ds)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)

# Install Rules
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/lib3ds.h" DESTINATION "include")